[gd_scene load_steps=11 format=2]

[ext_resource path="res://map/map.tscn" type="PackedScene" id=1]
[ext_resource path="res://game.gd" type="Script" id=2]
[ext_resource path="res://camera.gd" type="Script" id=3]
[ext_resource path="res://ui/ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://units/unit.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/minimap.gd" type="Script" id=6]
[ext_resource path="res://controls.gd" type="Script" id=7]
[ext_resource path="res://units/ai.gd" type="Script" id=8]
[ext_resource path="res://units/attack.gd" type="Script" id=9]
[ext_resource path="res://units/move.gd" type="Script" id=10]

[node name="game" type="Node2D"]
script = ExtResource( 2 )

[node name="map" parent="." instance=ExtResource( 1 )]

[node name="unit" parent="map" instance=ExtResource( 5 )]
visible = false

[node name="move" type="Node" parent="map/unit"]
script = ExtResource( 10 )

[node name="attack" type="Node" parent="map/unit"]
script = ExtResource( 9 )

[node name="ai" type="Node" parent="map/unit"]
script = ExtResource( 8 )

[node name="camera" type="Camera2D" parent="."]
offset = Vector2( 1056, 1056 )
limit_left = -1056
limit_top = -1056
limit_right = 1056
limit_bottom = 1056
script = ExtResource( 3 )

[node name="ui" parent="." instance=ExtResource( 4 )]

[node name="map_camera" type="Camera2D" parent="."]
offset = Vector2( 1056, 1056 )
current = true
zoom = Vector2( 3.52, 3.52 )
script = ExtResource( 6 )

[node name="controls" type="Node" parent="."]
script = ExtResource( 7 )
