[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/design.png" type="Texture" id=1]
[ext_resource path="res://ui/minimap.gd" type="Script" id=2]
[ext_resource path="res://assets/map/light.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/minimap.png" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 35, 175, 86 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0
modulate_color = Color( 1, 1, 1, 0.941176 )

[node name="minimap" type="ItemList"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -150.0
margin_right = 150.0
custom_styles/bg = SubResource( 1 )
script = ExtResource( 2 )

[node name="minimap_container" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 2
offset = Vector2( 0, 600 )
transform = Transform2D( 1, 0, 0, 1, 0, 600 )

[node name="sprite" type="Sprite" parent="minimap_container"]
unique_name_in_owner = true
light_mask = 2
position = Vector2( 75, -75 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 2, 2, 142, 142 )

[node name="fog" type="CanvasModulate" parent="minimap_container"]
color = Color( 0.392157, 0.392157, 0.392157, 1 )

[node name="light_template" type="Light2D" parent="minimap_container"]
unique_name_in_owner = true
light_mask = 2
texture = ExtResource( 3 )
mode = 2
range_layer_min = 2
range_layer_max = 2
range_item_cull_mask = 2
shadow_filter = 1
shadow_filter_smooth = 30.0
shadow_item_cull_mask = 2

[node name="map_symbols" type="Node2D" parent="minimap_container"]
unique_name_in_owner = true
position = Vector2( 0, -150 )

[node name="rect_layer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 2

[node name="cam_rect" type="ReferenceRect" parent="rect_layer"]
unique_name_in_owner = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = -50.0
rect_pivot_offset = Vector2( 22, 22 )
border_color = Color( 1, 1, 1, 0.666667 )
border_width = 2.0
editor_only = false
